--- a/index.html
+++ b/index.html
@@ -36,101 +36,199 @@
   }
   </script>
 
+  <!-- ====== الجمالية المُحسّنة (Drop‑in CSS) ====== -->
   <style>
     :root{
-      --primary:#1e40af;--primary-600:#1d4ed8;
-      --ring:#e5e7eb;--card:#f8fafc;
-      --text:#0f172a;--muted:#6b7280
+      /* Colors */
+      --primary: #1e40af;
+      --primary-600:#1d4ed8;
+      --text:#0f172a;
+      --muted:#64748b;
+      --ring:#e6eaf2;
+      --surface:#ffffff;
+      --card:#f8fafc;
+
+      /* Radii */
+      --r-sm:10px; --r-md:14px; --r-lg:16px; --r-xl:22px;
+
+      /* Shadows */
+      --shadow-sm: 0 2px 10px rgba(2,6,23,.06);
+      --shadow-md: 0 10px 26px rgba(2,6,23,.08);
+      --shadow-lg: 0 20px 48px rgba(2,6,23,.10);
+
+      /* Spacing scale */
+      --sp-1:.25rem; --sp-2:.5rem; --sp-3:.75rem; --sp-4:1rem; --sp-5:1.25rem; --sp-6:1.5rem; --sp-8:2rem;
+
+      /* Type scale */
+      --fs-0:.92rem;
+      --fs-1:clamp(1rem, .5vw + .9rem, 1.05rem);
+      --fs-2:clamp(1.05rem, .7vw + .95rem, 1.15rem);
+      --fs-3:clamp(1.25rem, 1vw + 1rem, 1.35rem);
+      --fs-h2:clamp(1.35rem, 1.6vw + 1rem, 1.6rem);
+      --fs-h1:clamp(1.6rem, 2.6vw + 1rem, 2.4rem);
     }
+
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
+    body{
+      margin:0;
+      font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;
+      color:var(--text);
+      background:var(--surface);
+      line-height:1.6;
+      -webkit-font-smoothing:antialiased;
+      text-rendering:optimizeLegibility;
+    }
     a{color:inherit;text-decoration:none}
     a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
 
-    /* وصولية */
+    /* Focus ring */
     :where(a,button,[role="button"],input,select,textarea):focus-visible{
-      outline:3px solid #2563eb;outline-offset:3px;border-radius:8px
+      outline:3px solid #2563eb; outline-offset:3px; border-radius:var(--r-md)
     }
-    .skip-link{
-      position:absolute;inset-inline-start:1rem;inset-block-start:-100px;
-      background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;
-      box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000
-    }
-    .skip-link:focus{inset-block-start:1rem}
 
-    /* Navbar */
-    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
+    /* Skip link */
+    .skip-link{
+      position:absolute; inset-inline-start:1rem; inset-block-start:-100px;
+      background:#fff; color:#000; padding:.6rem .9rem; border-radius:var(--r-sm);
+      box-shadow:var(--shadow-sm); z-index:1000
+    }
+    .skip-link:focus{ inset-block-start:1rem }
+
+    /* Navbar (glass on scroll) */
+    .navbar{
+      position:sticky; top:0; z-index:40;
+      background:color-mix(in oklab, #ffffff 75%, transparent);
+      border-bottom:1px solid color-mix(in oklab, var(--ring) 65%, transparent);
+      backdrop-filter:saturate(1.1) blur(8px);
+      transition:box-shadow .2s ease, border-color .2s ease, background .2s ease;
+    }
+    body.nav-scrolled .navbar{
+      box-shadow:0 6px 18px rgba(2,6,23,.06);
+      background:color-mix(in oklab, #ffffff 85%, transparent);
+    }
+
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem;position:relative}
-    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
-    .nav-links{display:flex;gap:1rem;align-items:center}
-    .nav-links a{padding:.5rem .75rem;border-radius:10px}
+    .brand{display:flex;align-items:center;gap:.8rem;font-weight:800;letter-spacing:.2px}
+    .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:12px;box-shadow:0 2px 6px rgba(0,0,0,.06)}
+    .nav-links{display:flex;gap:.25rem;align-items:center}
+    .nav-links a{
+      padding:.5rem .75rem; border-radius:var(--r-md); position:relative; font-size:var(--fs-1);
+    }
     .nav-links a:hover{background:var(--card)}
-    .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
-    .menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+    /* underline animation */
+    .nav-links a::after{
+      content:""; position:absolute; inset-inline:10px; inset-block-end:6px;
+      height:2px; border-radius:2px; background:linear-gradient(90deg,var(--primary),var(--primary-600));
+      transform:scaleX(0); transform-origin:right; transition:transform .18s ease;
+    }
+    [dir="ltr"] .nav-links a::after{ transform-origin:left; }
+    .nav-links a:hover::after{ transform:scaleX(1) }
+    .nav-links a[aria-current="page"]{ background:var(--card) }
+    .lang-toggle{
+      padding:.45rem .75rem; border:1px solid var(--ring); background:#fff; border-radius:var(--r-md); cursor:pointer;
+      font-weight:600;
+    }
+    .menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:#fff;border-radius:var(--r-md);cursor:pointer}
     .menu-toggle svg{width:20px;height:20px}
 
-    /* موبايل: القائمة منسدلة */
+    /* Mobile menu */
     @media (max-width: 900px){
       .menu-toggle{display:inline-flex}
       .nav-links{
         position:absolute; inset-inline:0; top:calc(100% + 8px);
-        background:#fff; border:1px solid var(--ring); border-radius:12px;
+        background:#fff; border:1px solid var(--ring); border-radius:var(--r-xl);
         display:grid; gap:.2rem; padding:.4rem;
-        box-shadow:0 12px 30px rgba(2,6,23,.10);
+        box-shadow:var(--shadow-lg);
         max-height:80vh; overflow:auto; opacity:1; transform:scale(1);
-        transition:max-height .2s ease, opacity .2s ease, transform .2s ease, padding .2s ease;
+        transition:opacity .2s ease, transform .2s ease, padding .2s ease;
       }
       .nav-links[data-open="false"]{transform:scale(.98);opacity:0}
     }
 
-    /* Hero + أقسام */
-    header.hero{background:linear-gradient(180deg,#fff 0,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
-    .hero-inner{display:grid;grid-template-columns:1.2fr 1fr;gap:2rem;padding:3rem 0;align-items:center}
-    .hero h1{margin:0 0 .5rem;font-size:clamp(1.6rem,2.6vw + 1rem,2.4rem)}
-    .hero p{color:var(--muted);margin:0 0 1.2rem}
-    .cta-row{display:flex;gap:.8rem;flex-wrap:wrap}
-    .btn{display:inline-flex;align-items:center;justify-content:center;gap:.5rem;padding:.9rem 1.1rem;border-radius:14px;font-weight:700;border:1px solid transparent;cursor:pointer}
-    .btn-primary{background:var(--primary);color:#fff;box-shadow:0 10px 28px rgba(29,78,216,.22)}
-    .btn-primary:hover{background:var(--primary-600)}
-    .btn-outline{background:#fff;border-color:var(--ring)}
-    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .hero-img img{width:100%;height:auto;object-fit:cover;border-radius:16px}
-    section{padding:2rem 0}
-    .section-head{display:flex;align-items:end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
-    .section-head h2{margin:0;font-size:1.4rem}
-    .muted{color:var(--muted)}
-    .grid{display:grid;gap:1rem}
+    /* Hero */
+    header.hero{
+      background:linear-gradient(180deg,#fff 0,#f6f8ff 100%);
+      border-bottom:1px solid var(--ring)
+    }
+    .hero-inner{
+      display:grid; grid-template-columns:1.2fr 1fr; gap:2.2rem; padding:3rem 0; align-items:center
+    }
+    .hero h1{margin:0 0 .6rem; font-size:var(--fs-h1); letter-spacing:.2px}
+    .hero p{color:var(--muted); margin:0 0 1.2rem; font-size:var(--fs-2)}
+    .cta-row{display:flex; gap:.8rem; flex-wrap:wrap}
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center; gap:.5rem;
+      padding:.9rem 1.1rem; border-radius:var(--r-xl); font-weight:800; border:1px solid transparent; cursor:pointer;
+      transition:transform .15s ease, box-shadow .15s ease, background-color .15s ease;
+      will-change:transform;
+    }
+    .btn-primary{background:var(--primary); color:#fff; box-shadow:0 10px 28px rgba(29,78,216,.22)}
+    .btn-primary:hover{background:var(--primary-600); transform:translateY(-1px)}
+    .btn-outline{background:#fff; border-color:var(--ring)}
+    .btn-outline:hover{box-shadow:var(--shadow-sm); transform:translateY(-1px)}
+
+    .card{
+      background:#fff; border:1px solid color-mix(in oklab, var(--ring) 70%, transparent);
+      border-radius:var(--r-lg); padding:1rem; box-shadow:var(--shadow-sm);
+      transition:transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+    }
+    .card:hover{ transform:translateY(-2px); box-shadow:var(--shadow-md); border-color:color-mix(in oklab, var(--ring) 90%, transparent) }
+
+    .hero-img img{
+      width:100%; height:auto; object-fit:cover; border-radius:var(--r-xl);
+      box-shadow:var(--shadow-md)
+    }
+
+    /* Sections */
+    section{padding:2.2rem 0; position:relative}
+    .section-head{
+      display:flex; align-items:flex-end; justify-content:space-between; gap:1rem; margin-bottom:1.2rem
+    }
+    .section-head h2{margin:0; font-size:var(--fs-h2)}
+    .muted{color:var(--muted); font-size:var(--fs-1)}
+    /* subtle divider */
+    section::before{
+      content:""; position:absolute; inset-inline:0; inset-block-start:-1px; height:1px;
+      background:linear-gradient(90deg, transparent, color-mix(in oklab, var(--ring) 80%, transparent), transparent);
+    }
+
+    /* Grids */
+    .grid{display:grid; gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     .grid-2{grid-template-columns:repeat(2,1fr)}
     @media (max-width:980px){
       .hero-inner{grid-template-columns:1fr}
       .grid-3,.grid-2{grid-template-columns:1fr}
     }
-    footer{border-top:1px solid var(--ring);background:#fff}
-    .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
 
-    /* وضع ليلي */
+    /* Footer */
+    footer{border-top:1px solid var(--ring); background:#fff}
+    .foot{display:flex; justify-content:space-between; gap:1rem; align-items:center; padding:1.2rem 0; font-size:var(--fs-1)}
+
+    /* Dark mode */
     @media (prefers-color-scheme: dark){
       :root{
-        --card:#0b1220; --ring:#1f2937;
-        --text:#e5e7eb; --muted:#9ca3af;
+        --surface:#0a0f1a;
+        --card:#0b1220;
+        --ring:#1e293b;
+        --text:#e5e7eb;
+        --muted:#9ca3af;
         --primary:#3b82f6; --primary-600:#2563eb;
+        --shadow-sm: 0 2px 12px rgba(0,0,0,.35);
+        --shadow-md: 0 10px 28px rgba(0,0,0,.45);
+        --shadow-lg: 0 20px 52px rgba(0,0,0,.5);
       }
-      body{ background:#0a0f1a; }
-      .navbar, footer{ background:#0c1220; border-color:var(--ring); }
-      .card{ background:#0f172a; border-color:var(--ring); }
+      .navbar, footer{ background:rgba(12,18,32,.7); border-color:var(--ring); }
+      .card{ background:#0f172a; border-color:color-mix(in oklab, var(--ring) 70%, transparent); }
       .btn-outline{ background:transparent; border-color:var(--ring); color:var(--text); }
+      .nav-links a:hover, .nav-links a[aria-current="page"]{ background:#0f172a; }
     }
 
-    /* تقليل الحركة */
+    /* Reduced motion */
     @media (prefers-reduced-motion: reduce){
-      *{
-        animation-duration:.01ms !important; animation-iteration-count:1 !important;
-        transition-duration:.01ms !important; scroll-behavior:auto !important;
-      }
+      *{ transition-duration:.01ms !important; animation-duration:.01ms !important; animation-iteration-count:1 !important; scroll-behavior:auto !important; }
     }
   </style>
 </head>
@@ -237,6 +335,7 @@
     </div>
   </footer>
 
+  <!-- ====== سلوك القائمة + اللغة (نفس منطقك المحسّن) ====== -->
   <script>
     // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
@@ -249,7 +348,6 @@
     function setMenu(open){
       primaryNav.setAttribute('data-open', String(open));
       menuBtn.setAttribute('aria-expanded', String(open));
-
       if (open){
         primaryNav.hidden = false;
         const firstFocusable = primaryNav.querySelector('a,button');
@@ -307,7 +405,6 @@
     // تبديل اللغة + حفظ التفضيل
     const toggleBtn = document.getElementById('lang-toggle');
     let isEn = localStorage.getItem('khotwa_lang') === 'en';
-
     function setLang(en){
       isEn = en;
       document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
@@ -318,9 +415,20 @@
       toggleBtn.setAttribute('aria-pressed', en ? 'true' : 'false');
       localStorage.setItem('khotwa_lang', en ? 'en' : 'ar');
     }
-
     toggleBtn.addEventListener('click',()=> setLang(!isEn));
     setLang(isEn);
+  </script>
+
+  <!-- ====== ظل النافبار عند التمرير (تحسين بصري صغير) ====== -->
+  <script>
+    (function(){
+      const onScroll = () => {
+        if (window.scrollY > 6) document.body.classList.add('nav-scrolled');
+        else document.body.classList.remove('nav-scrolled');
+      };
+      onScroll();
+      window.addEventListener('scroll', onScroll, {passive:true});
+    })();
   </script>
 </body>
 </html>
