--- a/about.html
+++ b/about.html
@@ -92,7 +92,6 @@
     .member-card{background:#fff;border:1px solid var(--ring);border-radius:var(--r-lg);box-shadow:var(--sh-sm);overflow:hidden;display:flex;flex-direction:column}
     .member-card img{
       width:100%; height:auto; aspect-ratio:3/2; object-fit:cover;
-      /* نرفع التركيز للأعلى عشان ما يتقص التاج/العِصابة */
       object-position:50% 22%;
       background:#f3f4f6; display:block;
     }
@@ -119,7 +118,7 @@
   </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
+  <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
 
   <!-- NAVBAR -->
   <nav class="navbar" aria-label="الشريط العلوي">
@@ -167,7 +166,7 @@
       </div>
     </section>
 
-    <!-- Members (الترتيب والروابط الصحيحة) -->
+    <!-- Members -->
     <section>
       <div class="section-head">
         <h2 data-lang="ar">أعضاء المجلس</h2>
@@ -175,51 +174,58 @@
       </div>
 
       <div class="members">
-        <!-- 1: الرئيس -->
+        <!-- 1: الرئيس (حمد الهاجري) — ركّزنا الوجه: 50% 30% -->
         <div class="member-card">
-          <img src="https://f.top4top.io/p_35166op0u4.jpg" alt="حمد الهاجري – الرئيس" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://f.top4top.io/p_35166op0u4.jpg" alt="حمد الهاجري – الرئيس" width="360" height="240"
+               loading="lazy" decoding="async" style="object-position:50% 30%;">
           <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden>Hamad Al-Hajeri</h3>
           <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden>President</p>
         </div>
 
         <!-- 2: نائب الرئيس -->
         <div class="member-card">
-          <img src="https://c.top4top.io/p_3516ojbq71.jpg" alt="عبدالله الجابري – نائب الرئيس" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://c.top4top.io/p_3516ojbq71.jpg" alt="عبدالله الجابري – نائب الرئيس" width="360" height="240"
+               loading="lazy" decoding="async">
           <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden>Abdullah Al-Jaberi</h3>
           <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden>Vice President</p>
         </div>
 
         <!-- 3: قائد المجموعة -->
         <div class="member-card">
-          <img src="https://d.top4top.io/p_3516sprel2.jpg" alt="عبدالهادي المري – قائد المجموعة" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://d.top4top.io/p_3516sprel2.jpg" alt="عبدالهادي المري – قائد المجموعة" width="360" height="240"
+               loading="lazy" decoding="async">
           <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden>Abdulhadi Al-Marri</h3>
           <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden>Team Leader</p>
         </div>
 
-        <!-- 4: منسق الفعاليات (حسن) -->
+        <!-- 4: منسق الفعاليات -->
         <div class="member-card">
-          <img src="https://h.top4top.io/p_3516xcf386.jpg" alt="حسن الصيعري – منسق الفعاليات" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://h.top4top.io/p_3516xcf386.jpg" alt="حسن الصيعري – منسق الفعاليات" width="360" height="240"
+               loading="lazy" decoding="async">
           <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden>Hassan Al-Sieari</h3>
           <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden>Events Coordinator</p>
         </div>
 
         <!-- 5: منسق الإعلام -->
         <div class="member-card">
-          <img src="https://g.top4top.io/p_3516zrfo75.jpg" alt="حمد المري – منسق الإعلام" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://g.top4top.io/p_3516zrfo75.jpg" alt="حمد المري – منسق الإعلام" width="360" height="240"
+               loading="lazy" decoding="async">
           <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden>Hamad Al-Marri</h3>
           <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden>Media Coordinator</p>
         </div>
 
-        <!-- 6: عضو -->
+        <!-- 6: محمد الكثيري — ركّزنا الوجه: 50% 35% -->
         <div class="member-card">
-          <img src="https://e.top4top.io/p_35164gg6m3.jpg" alt="محمد الكثيري – عضو" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://e.top4top.io/p_35164gg6m3.jpg" alt="محمد الكثيري – عضو" width="360" height="240"
+               loading="lazy" decoding="async" style="object-position:50% 35%;">
           <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden>Mohamed Al-Katheeri</h3>
           <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
         </div>
 
         <!-- 7: عضو -->
         <div class="member-card">
-          <img src="https://i.top4top.io/p_35168rtso7.jpg" alt="موزة العلي – عضو" width="360" height="240" loading="lazy" decoding="async">
+          <img src="https://i.top4top.io/p_35168rtso7.jpg" alt="موزة العلي – عضو" width="360" height="240"
+               loading="lazy" decoding="async">
           <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden>Mouza Al-Ali</h3>
           <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
         </div>
